--- a/catalog-be/pom.xml
+++ b/catalog-be/pom.xml
@@ -746,6 +746,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>${commons.text.version}</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
