--- a/common-app-api/pom.xml
+++ b/common-app-api/pom.xml
@@ -265,6 +265,12 @@
       <version>${cassandra.driver.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>${commons.text.version}</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
