--- a/onboarding/pom.xml
+++ b/onboarding/pom.xml
@@ -75,7 +75,7 @@
     <!--commons.io.version>2.5</commons.io.version-->
     <!--commons.lang.version>2.6</commons.lang.version-->
     <!--commons.lang3.version>3.4</commons.lang3.version-->
-    <commons.text.version>1.3</commons.text.version>
+    <!--commons.text.version>1.3</commons.text.version-->
     <cxf.version>3.3.6</cxf.version>
     <!--datastax.cassandra.version>3.8.0</datastax.cassandra.version-->
     <easymock.version>3.4</easymock.version>
