--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@ Modifications copyright (c) 2018-2019 Nokia
 
     <commons.cli.version>1.4</commons.cli.version>
     <commons.collections.version>4.1</commons.collections.version>
+    <commons.text.version>1.3</commons.text.version>
     <commons.validator.version>1.6</commons.validator.version>
     <javax.jms.version>1.1</javax.jms.version>
     <javax.val-api.version>1.1.0.Final</javax.val-api.version>
