--- a/ui-ci/pom.xml
+++ b/ui-ci/pom.xml
@@ -300,6 +300,12 @@
       <artifactId>netty-handler</artifactId>
       <version>${netty.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>${commons.text.version}</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
