--- a/utils/DmaapPublisher/pom.xml
+++ b/utils/DmaapPublisher/pom.xml
@@ -10,6 +10,7 @@
     <groupId>org.openecomp.sdc</groupId>
     <artifactId>sdc-main</artifactId>
     <version>1.7.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <dependencies>
