--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,6 @@ Modifications copyright (c) 2018-2019 Nokia
 
     <!-- 3rd parties versions -->
     <!--bean-matcher.version>0.11</bean-matcher.version-->
-    <commons.lang3.version>3.10</commons.lang3.version>
     <guava.version>29.0-jre</guava.version>
     <janusgraph.version>0.3.1</janusgraph.version>
     <spring.version>4.3.18.RELEASE</spring.version>
@@ -57,15 +56,18 @@ Modifications copyright (c) 2018-2019 Nokia
     <lombok.version>1.18.12</lombok.version>
     <commons-beanutils>1.9.3</commons-beanutils>
     <commons-configuration>2.3</commons-configuration>
-    <apache-poi.version>4.1.0</apache-poi.version>
-    <onap.logging.version>1.6.1</onap.logging.version>
-    <commons.io.version>2.5</commons.io.version>
-    <groovy.version>2.4.13</groovy.version>
-
     <commons.cli.version>1.4</commons.cli.version>
     <commons.collections.version>4.1</commons.collections.version>
+    <commons.crypto.version>1.0.0</commons.crypto.version>
+    <commons.digester.version>2.1</commons.digester.version>
+    <commons.lang3.version>3.10</commons.lang3.version>
+    <commons.io.version>2.5</commons.io.version>
     <commons.text.version>1.3</commons.text.version>
     <commons.validator.version>1.6</commons.validator.version>
+    <apache-poi.version>4.1.0</apache-poi.version>
+    <onap.logging.version>1.6.1</onap.logging.version>
+    <groovy.version>2.4.13</groovy.version>
+
     <javax.jms.version>1.1</javax.jms.version>
     <javax.val-api.version>1.1.0.Final</javax.val-api.version>
     <hibernate.validator.version>5.3.6.Final</hibernate.validator.version>
