WIP update pom.xml

--- a/asdctool/pom.xml
+++ b/asdctool/pom.xml
@@ -236,7 +236,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-configuration2</artifactId>
-      <version>${commons-configuration}</version>
+      <version>${commons.configuration.version}</version>
     </dependency>
 
     <dependency>
