--- a/onboarding/pom.xml
+++ b/onboarding/pom.xml
@@ -180,7 +180,7 @@
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>${commons-beanutils}</version>
+        <version>${commons.beanutils.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
