--- a/openecomp-be/lib/openecomp-core-lib/openecomp-zusammen-lib/openecomp-zusammen-core/pom.xml
+++ b/openecomp-be/lib/openecomp-core-lib/openecomp-zusammen-lib/openecomp-zusammen-core/pom.xml
@@ -25,8 +25,14 @@
     </dependency>
     <dependency>
       <groupId>com.amdocs.zusammen</groupId>
+      <artifactId>zusammen-adaptor-inbound-api</artifactId>
+      <version>${zusammen.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amdocs.zusammen</groupId>
       <artifactId>zusammen-adaptor-inbound-impl</artifactId>
       <version>${zusammen.version}</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.amdocs.zusammen.plugin</groupId>
