--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -246,6 +246,12 @@ limitations under the License.
             <version>${commons.net.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons.text.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
