--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@ Modifications copyright (c) 2018-2019 Nokia
         <tosca.datatype.version>${project.version}</tosca.datatype.version>
 
         <!-- 3rd parties versions -->
-        <guava.version>29.0-jre</guava.version>
+        <guava.version>18.0</guava.version>
         <janusgraph.version>0.3.1</janusgraph.version>
         <spring.version>4.3.18.RELEASE</spring.version>
         <jersey.version>2.27</jersey.version>
